fix: character size change, labels gap fix

--- a/src/app/characters/characters.component.scss
+++ b/src/app/characters/characters.component.scss
@@ -1,5 +1,5 @@
-@use '/src/styles/variables' as *;
-@use '/src/styles/mixins' as *;
+@use "/src/styles/variables" as *;
+@use "/src/styles/mixins" as *;
 
 .characters-container {
   display: flex;
@@ -34,7 +34,7 @@
 
     @include mobileMinBreakPoint {
       flex-direction: row;
-      gap: 1rem;
+      gap: 0.3rem;
     }
 
     input,
@@ -74,7 +74,8 @@
 
     label {
       margin-top: 0.5rem;
-      font-size: $f-size-list;
+      padding-left: 0.5rem;
+      font-size: $f-size-small;
       font-family: $f-family-poppins;
       color: $color-lightBlue;
 
@@ -96,7 +97,7 @@
       color: $color-darkBlue;
 
       @include mobileMinBreakPoint {
-        margin: 0;
+        margin: 0 0 0 0.7rem;
       }
 
       &:hover {
@@ -113,7 +114,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
     border-radius: 1rem 1rem 0 0;
     height: 3rem;
     background-color: $color-wheat;
@@ -127,7 +128,7 @@
 .label {
   flex: 1;
   padding-left: 0.3rem;
-  font-size: $f-size-list;
+  font-size: $f-size-small;
   font-family: $f-family-poppins;
   color: $color-darkBlue;
 
@@ -138,7 +139,7 @@
   }
 
   @include mobileMinBreakPoint {
-    padding-left: 1.7rem;
+    padding-left: 1.2rem;
   }
 }
 
@@ -147,10 +148,10 @@
   justify-content: space-between;
   align-items: center;
   transition: $anim-very-fast-ease;
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
   border-radius: 1rem;
   width: 100%;
-  height: 5rem;
+  height: 4rem;
   background-color: $color-lightBlue;
   cursor: pointer;
 
@@ -169,7 +170,7 @@
     flex: 1;
     padding-left: 0.5rem;
     cursor: pointer;
-    font-size: $f-size-list;
+    font-size: $f-size-small;
     font-family: $f-family-poppins;
     color: $color-darkBlue;
 
